<resources>
    <string name="app_name">AlShaqahaaPharmacies</string>
    <string name="email">Email</string>
    <string name="enter_email_to_send_reset_email">Enter email to send reset email</string>
    <string name="forget_password">Forget Password</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="create_now">Create Now!</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="log_in">Log In</string>
    <string name="use">use</string>
    <string name="condition">Condition</string>
    <string name="price">Price</string>
    <string name="names">Names</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="branch">Branch</string>
    <string name="cart">Cart</string>
    <string name="card_number">Card number</string>
    <string name="paying_off">Paying off</string>
    <string name="_00_00">00/00</string>
    <string name="cash">Cash</string>
    <string name="credit_card">Credit card</string>
    <string name="phone_number">Phone number</string>
    <string name="delete">Delete</string>
    <string name="who_are_we">Who Are We</string>
    <string name="alshaqha_pharmacy_is_your_comprehensive_online_store_to_meet_your_vitamin_and_painkillers_needs">AlShaqha Pharmacy is your comprehensive online store to meet your vitamin and painkillers needs</string>
    <string name="through_it_your_medicines_can_be_booked_through_it_and_received_from_the_following_branches">Through it, your medicines can be booked through it and received from the following branches.</string>
    <string name="king_fahd_branch_al_malqa_branch_alnarjs_branch">King Fahd branch Al-Malqa branch Alnarjs branch</string>

    <string-array name="branches">
        <item>Branches</item>
        <item>طريق الملك فهد</item>
        <item>حي النرجس</item>
        <item>طريق الملك سلمان</item>
    </string-array>

</resources>